fix: no mobile logo squash

--- a/src/stylesheets/components/card.scss
+++ b/src/stylesheets/components/card.scss
@@ -470,11 +470,6 @@
 					font-weight: 600;
 					color: #fff;
 				}
-
-				span.discriminator {
-					font-size: 14px;
-					color: hsla(0, 0%, 100%, 0.6);
-				}
 			}
 
 			.info__badges {
